@@ -20,8 +20,8 @@
 #ifndef _FFVC_VERSION_H_
 #define _FFVC_VERSION_H_
 
-#define FFVC_VERSION_NO  "2.3.5"
-#define FFVC_REVISION    "20150705_2400"
+#define FFVC_VERSION_NO  "2.3.6"
+#define FFVC_REVISION    "20150708_1900"
 
 #endif /* _FFVC_VERSION_H_ */
 
