@@ -19,6 +19,11 @@ REVISION HISTORY
 ================
 
 --------------------------
+2015-07-08
+r1620 add Strability Control function
+- gather isnan flag in Loop()
+
+--------------------------
 2015-07-05
 r1619 modify Vspec implementation
 - encVbitIBC(), encVbitIBCrev(), encVbitOBC()
